--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1> <span class="name-color">Tanvir Ahamed Alif</span> World</h1>
         <h3>Build Your Dreem With Us</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur recusandae, non earum optio nihil laborum! Rem consequuntur soluta officiis et, accusantium eaque quo, ratione veritatis suscipit, quod placeat porro omnis?</p> </div>
-       <div> <img class="" src="/Untitled design (2).png"/> </div>
+       <div> <img class="" src="https://img.wapka.org/008lx3.png"/> </div>
     </section>
 </body>
 </html>
