--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
 </head>
 <body>
     <section class="same">
-       <div>
+       <div class="text">
         <h1>Welcome To</h1>
-        <h1> <span class="name-color">Tanvir Ahamed Alif</span> World</h1>
+        <h1> <span >Tanvir Ahamed Alif</span> World</h1>
         <h3>Build Your Dreem With Us</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur recusandae, non earum optio nihil laborum! Rem consequuntur soluta officiis et, accusantium eaque quo, ratione veritatis suscipit, quod placeat porro omnis?</p> </div>
+        <p>After being taught and trained in a reputed college in Bangladesh i started my preparetion fo my  Bacholer degree career . I started my career in a  regional unemployment problem solution organization of Netrokona , Bangladesh and Simultaneously, I started learning programming and freelancing with this organization and working on local market places and Fiverr. </p> </div>
        <div> <img class="" src="https://img.wapka.org/008lx3.png"/> </div>
     </section>
+<section class="same2">
+
+    <div> <img src="/2nd-img.png" alt=""></div>
+    <div class="text"><h1>Big <span> Dreem </span> </h1> 
+        <h3>Become a problem solver </h3>
+    <p>I have already learned the basic HTML and CSS . I can build any simple website . Even I can teach any people . <span>MY</span> goal is to achive higher degree and help people .</p>
+   <a target="_blank" href="www.sfbd.wapka.co" class="link">Download Reasume</a>
+    </div><div>
+   <img class="img-same" src="/Black_Gold_Illustration_Gear_Logo-removebg-preview.png" alt=""></div>
+</section>
+
+
 </body>
 </html>
