--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </section>
 <section class="same2">
 
-    <div> <img src="/2nd-img.png" alt=""></div>
+    <div> <img src="https://img.wapka.org/008m6f.png" alt=""></div>
     <div class="text"><h1>Big <span> Dreem </span> </h1> 
         <h3>Become a problem solver </h3>
     <p>I have already learned the basic HTML and CSS . I can build any simple website . Even I can teach any people . <span>MY</span> goal is to achive higher degree and help people .</p>
-   <a target="_blank" href="www.sfbd.wapka.co" class="link">Download Reasume</a>
+   <a target="_blank" href="http://sfbd.wapka.co/" class="link">Download Reasume</a>
     </div><div>
-   <img class="img-same" src="/Black_Gold_Illustration_Gear_Logo-removebg-preview.png" alt=""></div>
+   <img class="img-same" src="https://img.wapka.org/008m6g.png" alt=""></div>
 </section>
 
 
