--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div> <img src="https://img.wapka.org/008m6f.png" alt=""></div>
     <div class="text"><h1>Big <span> Dreem </span> </h1> 
         <h3>Become a problem solver </h3>
-    <p>I have already learned the basic HTML and CSS . I can build any simple website . Even I can teach any people . <span>MY</span> goal is to achive higher degree and help people .</p>
+    <p>I have already learned the basic HTML and CSS . I can build any simple website . Even I can teach any people . <span>MY</span> goal is to achive higher degree and help to people .</p>
    <a target="_blank" href="http://sfbd.wapka.co/" class="link">Download Reasume</a>
     </div><div>
    <img class="img-same" src="https://img.wapka.org/008m6g.png" alt=""></div>
