--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- nav----------------------------------tag -->
+    <header >
+        <a href="#">
+            <img src="/logo_home-removebg-preview.png" alt="">
+        </a>
+
+       <li class="li-list">
+        <ul><a href="#">Home</a></ul>
+        <ul><a href="#">About</a></ul>
+        <ul><a href="#">Contract</a></ul>
+       </li>
     
+    </header>
     <section class="same3">
        <div class="text">
         <h1 >Welcome To</h1>
