--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- nav----------------------------------tag -->
     <header >
         <a href="#">
-            <img src="/logo_home-removebg-preview.png" alt="">
+            <img src="logo_home-removebg-preview.png" alt="">
         </a>
 
        <li class="li-list">
@@ -29,13 +29,13 @@
         <p>After being taught and trained in a reputed college in Bangladesh i started my preparetion fo my  Bacholer degree career . I started my career in a  regional unemployment problem solution organization of Netrokona , Bangladesh and Simultaneously, I started learning programming and freelancing with this organization and working on local market places and Fiverr. </p> 
         <a target="_blank" href="http://sfbd.wapka.co/" class="link">Hire Me</a>
     </div>
-       <div> <img class="img-same1" src="/Untitled design (6).png"/> </div>
+       <div> <img class="img-same1" src="Untitled design (6).png"/> </div>
        
     </section>
     <!------------page 2-------------->
 <section class="same2">
 
-    <div> <img src="/2nd-img.png" alt=""></div>
+    <div> <img src="Untitled design (7).png" alt=""></div>
     <div class="text"><h1>Big <span> Dreem </span> </h1> 
         <h3>Become a problem solver </h3>
     <p>I have already learned the basic HTML and CSS . I can build any simple website . Even I can teach any people . <span>MY</span> goal is to achive higher degree and help people .</p>
