downlode reasure add as a demo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="text"><h1>Big <span> Dreem </span> </h1> 
         <h3>Become a problem solver </h3>
     <p>I have already learned the basic HTML and CSS . I can build any simple website . Even I can teach any people . <span>MY</span> goal is to achive higher degree and help people .</p>
-   <a target="_blank" href="www.sfbd.wapka.co" class="link">Download Reasume</a>
+   <a target="_blank" href="e049e0cb89afb8854c0688f112991afe.pdf" download class="link">Download Reasume</a>
     </div><div>
    <img class="img-same" src="https://img.wapka.org/008m6g.png" alt=""></div>
 </section>
