--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- nav----------------------------------tag -->
     <section class="bg">
-    <header >
+    <header class="nav-fix">
         <a href="#" class="bg-text">
           <h2>Tanv<span>ir.</span></h2>
         </a>
